# WotLK-Extensions

./: .gitignore  CMakeLists.txt  HOWTO.md  LICENSE  README.md
Docs/: README.md
Docs/Custom DBCs/: LFGRoles.cdbc  ZoneLight.cdbc  ZoneLightPoint.cdbc
Patcher/: CMakeLists.txt  Main.cpp
WotLKExtensions/: CMakeLists.txt  CustomLua.cpp  CustomLua.h  CustomPacket.cpp  CustomPacket.h  Functions.cpp  Functions.h  Logger.cpp  Logger.h  Macros.h  Main.cpp  Main.h  Misc.cpp  Misc.h  PatchConfig.h  Player.cpp  Player.h  SharedDefines.h  Util.cpp  Util.h  World.cpp  World.h
WotLKExtensions/CDBCMgr/: CDBC.cpp  CDBC.h  CDBCMgr.cpp  CDBCMgr.h
WotLKExtensions/CDBCMgr/CDBCDefs/: LFGRoles.h  ZoneLight.h  ZoneLightPoint.h
WotLKExtensions/DBCMgr/: CustomDBC.cpp  CustomDBC.h  CustomDBCMgr.cpp  CustomDBCMgr.h
WotLKExtensions/DBCMgr/Defs/: SpellCustomAttributes.h
WotLKExtensions/cmake/: PatchConfig.hpp.in
WotLKExtensions/include/: Main.hpp  SharedDefines.hpp
WotLKExtensions/include/CDBCMgr/: CDBC.hpp
WotLKExtensions/include/CDBCMgr/CDBCDefs/: LFGRoles.hpp
WotLKExtensions/include/Client/: CNetClient.hpp  ClientServices.hpp  CustomLua.hpp  DBClient.hpp  FrameScript.hpp  SErr.hpp  SFile.hpp  SMem.hpp  SStr.hpp
WotLKExtensions/include/Misc/: Logger.hpp
WotLKExtensions/include/System/: CustomLua.hpp  CustomPacket.hpp  Misc.hpp
WotLKExtensions/include/WorldData/: World.hpp
WotLKExtensions/src/: Main.cpp  Main.hpp  SharedDefines.hpp
WotLKExtensions/src/CDBCMgr/: CDBC.cpp  CDBC.hpp  CDBCMgr.cpp  CDBCMgr.hpp
WotLKExtensions/src/CDBCMgr/CDBCDefs/: LFGRoles.cpp  LFGRoles.hpp  ZoneLight.cpp  ZoneLight.hpp  ZoneLightPoint.cpp  ZoneLightPoint.hpp
WotLKExtensions/src/Client/: CDataStore.cpp  CDataStore.hpp  CFormula.cpp  CFormula.hpp  CGChat.cpp  CGChat.hpp  CGTooltip.cpp  CGTooltip.hpp  CGlueMgr.cpp  CGlueMgr.hpp  CMap.cpp  CMap.hpp  CMissile.cpp  CNetClient.cpp  CNetClient.hpp  CVar.cpp  CVar.hpp  ClientServices.cpp  ClientServices.hpp  CustomFileIO.cpp  CustomFileIO.hpp  CustomLua.cpp  CustomLua.hpp  CustomPacket.cpp  CustomPacket.hpp  DBClient.cpp  DBClient.hpp  FrameScript.cpp  FrameScript.hpp  MacroConditions.cpp  MacroConditions.hpp  Misc.cpp  Misc.hpp  SErr.cpp  SFile.cpp  SFile.hpp  SMem.cpp  SMem.hpp  SStr.cpp  SStr.hpp  (+6 more)
WotLKExtensions/src/Data/: DBCAddresses.hpp  DBCReloader.cpp  DBCReloader.hpp  DBItemCache.cpp  DBItemCache.hpp  Enums.hpp  Math.cpp  Math.hpp  MiscAddresses.hpp  Structs.hpp
WotLKExtensions/src/GameObjects/: CGBag.cpp  CGBag.hpp  CGGameObject.hpp  CGItem.cpp  CGItem.hpp  CGObject.hpp  CGPetInfo.cpp  CGPetInfo.hpp  CGPlayer.cpp  CGPlayer.hpp  CGUnit.cpp  CGUnit.hpp  Player.cpp  Player.hpp
WotLKExtensions/src/Misc/: DataContainer.cpp  DataContainer.hpp  Logger.cpp  LuaUnlock.cpp  LuaUnlock.hpp  Util.cpp  Util.hpp
WotLKExtensions/src/System/: CustomLua.cpp  CustomPacket.cpp  Misc.cpp
WotLKExtensions/src/WorldData/: CGWorldFrame.cpp  CGWorldFrame.hpp  CMovement.hpp  CWorld.cpp  CWorld.hpp  DNInfo.cpp  DNInfo.hpp  World.cpp  ZoneLightData.cpp  ZoneLightData.hpp
